[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/GUI/UI.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Lobby.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/Font_Gunplay_42.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/Fonts/Font_Gunplay_34.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/Fonts/GUNPLAY_.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Lobby" type="Node"]
script = ExtResource( 2 )

[node name="MultiplayerSetup" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.7818
margin_top = -1.9762
margin_right = 1.78174
margin_bottom = -1.9762
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UIHolder" type="ColorRect" parent="MultiplayerSetup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -336.5
margin_top = -257.587
margin_right = 336.5
margin_bottom = 254.413
color = Color( 0.368627, 0.352941, 0.352941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Username" type="LineEdit" parent="MultiplayerSetup/UIHolder"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -237.122
margin_top = -138.0
margin_right = 243.878
margin_bottom = -73.0
custom_fonts/font = ExtResource( 4 )
align = 1
placeholder_text = "Enter Username"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinButton" type="Button" parent="MultiplayerSetup/UIHolder"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -123.057
margin_top = 120.961
margin_right = 111.943
margin_bottom = 191.961
custom_fonts/font = ExtResource( 4 )
text = "Join Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostButton" type="Button" parent="MultiplayerSetup/UIHolder"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -126.776
margin_top = 28.4071
margin_right = 119.224
margin_bottom = 103.407
custom_fonts/font = ExtResource( 4 )
text = "Host Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 1 )

[node name="StartGame" type="Button" parent="UI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -198.0
margin_top = -228.0
margin_right = 198.0
margin_bottom = -128.0
custom_fonts/font = ExtResource( 4 )
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PendingStart" type="Label" parent="UI"]
anchor_right = 1.0
margin_top = 73.0204
margin_bottom = 154.02
custom_fonts/font = ExtResource( 3 )
text = "Waiting For Host To Start The Match"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MultiplayerSetup/UIHolder/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="MultiplayerSetup/UIHolder/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="UI/StartGame" to="." method="_on_StartGame_pressed"]
